Mon Mar 26 08:24:04 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (fmtspcl.ok): Don't remove for cleaning, add
	to EXTRA_DIST.

Fri Mar  9 11:38:34 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (fmtspcl.tok): Removed use of and reference
	to this file.

Tue Feb  6 08:21:02 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (double1, double2, zero2): New tests.
	* double1.awk, double1.ok, double2.awk, double2.ok,
	zero2.awk, zero2.ok: New files.

Sun Feb  4 16:32:45 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (parse1): New test.
	* parse1.awk, parse1.in, parse1.ok: New files.

Thu Feb  1 17:41:48 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* Makefile.am (fmtspcl): New test.
	(CLEANFILES): Add fmtpspcl.ok to list.
	* fmtspcl.awk, fmtspcl.tok: New files.

Mon Jan 29 15:31:35 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* Makefile.am (diffout): Make it work if no problems.
	(valgrind-scan): New target to show problems.

Mon Jan 29 12:51:16 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (reint2): New test.
	* reint2.awk, reint2.in, reint2.ok: New files.

Fri Jan 26 20:01:38 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* Makefile.am (intformat): New test.
	* intformat.awk, intformat.ok: New files.

Tue Jan 23 08:10:48 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (fwtest2): New test.
	* fwtest2.awk, fwtest2.in, fwtest2.ok: New files.

Sun Jan 21 13:09:33 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (synerr2, wideidx2): New test.
	* synerr2.awk, synerr2.ok, wideidx2.awk, wideidx2.ok: New files.

Fri Jan 19 15:11:12 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (strnum1, widesub4): New test.
	* strnum1.awk, strnum1.ok, widesub4.awk, widesub4.ok: New files.

Thu Jan 18 13:37:00 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* Makeilfe.am (devfd, wideidx, widesub, widesub2, widesub3): New
	tests.