@@ -2,5 +2,3 @@
 2^61= 2305843009213693952 2305843009213693952 2.30584e+18 200000000000000000000
 2^62= 4611686018427387904 4611686018427387904 4.61169e+18 400000000000000000000
 2^63= 9223372036854775808 9223372036854775808 9.22337e+18 1000000000000000000000
-2^64= 18446744073709551616 18446744073709551616 1.84467e+19 1.84467e+19
-2^65= 36893488147419103232 36893488147419103232 3.68935e+19 3.68935e+19
