@@ -1,9 +1,9 @@
 gawk: fmtspcl.awk:10: warning: sqrt: called with negative argument -1
-gawk: fmtspcl.awk:6: warning: [s]printf: value positive_nan is out of range for `%x' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value positive_nan is out of range for `%d' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value negative_nan is out of range for `%x' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value negative_nan is out of range for `%d' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value positive_infinity is out of range for `%x' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value positive_infinity is out of range for `%d' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value negative_infinity is out of range for `%x' format
-gawk: fmtspcl.awk:6: warning: [s]printf: value negative_infinity is out of range for `%d' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value nan is out of range for `%x' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value nan is out of range for `%d' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value nan is out of range for `%x' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value nan is out of range for `%d' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value inf is out of range for `%x' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value inf is out of range for `%d' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value -inf is out of range for `%x' format
+gawk: fmtspcl.awk:6: warning: [s]printf: value -inf is out of range for `%d' format
