@@ -1,3 +1,7 @@
+Thu Apr 12 18:59:33 2007        Pat Rankin      <rankin@pactechdata.com>
+
+	* vms-conf.h: Leave HAVE_MKSTEMP undefined; we want tmpfile().
+
 Thu Mar 29 19:30:20 2007        Pat Rankin      <rankin@pactechdata.com>
 
 	* vms-conf.h: reconcile with configh.in.
